syntax = "proto3";

option java_multiple_files = true;
option java_package = "sss.MessageAudio";
option java_outer_classname = "MessageAudioImpl";
package sss;

service MessageAudio {
  rpc PushMessage(MessageRequest) returns (MessageResponse) {}
  //3.1.1	RPC Method 1 Message Push
  //Client request Server to return a message if there is an object in black list.
  //simple rpc
  rpc Audio(stream AudioRequest) returns (stream AudioRespon) {}
  //4.1.1	RPC Method 1 Bidirectional Intercom
  //Bidirectional Intercom service is work between the server and client.
  //bidirectional streaming rpc
}

message MessageRequest {
  string request = 1;
}
message MessageResponse {
  string message = 1;
}
//3.1.1	RPC Method 1 Message Push
message AudioRequest {
  bytes audiosend = 1;
}
message AudioRespon {
  bytes audioreceived = 1;
}
//4.1.1	RPC Method 1 Bidirectional Intercom