syntax = "proto3";

option java_multiple_files = true;
option java_package = "sss.generated";
option java_outer_classname = "ServiceImpl";
package sss;

service ServiceRoute {
  rpc DetectionMotion (MotionDetectionRequest) returns (MotionDetectionResponse) {}
  //2.1.1	RPC Method 1 Motion Detection
  //Server request Client to return a message if there is an object moving.
  //simple rpc
}

message MotionDetectionRequest {
  bool is_moving = 1;
}
message MotionDetectionResponse {
  string moving_response = 1;
}
//2.1.1	RPC Method 1 Motion Detection